--- a/Prime_ch16/Prime_ch16/Prime_ch16.vcxproj.filters
+++ b/Prime_ch16/Prime_ch16/Prime_ch16.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="ex16.2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Blob.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Prime_ch16.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Blob.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
